--- a/loginstyle.css
+++ b/loginstyle.css
@@ -47,8 +47,8 @@ body{
 }
 .btn-danger {
 	color: #fff;
-	background-color: #ff006a;
-	border: 2px solid #ef0063;
+	background-color: crimson;
+	border: 2px solid crimson;
 	padding: 7px 38px;
 	font-size: 16px;
 	border-radius: 0px;
@@ -56,8 +56,8 @@ body{
 
 .btn-hanger {
 	color: #fff;
-	background-color: #ff006a;
-	border: 2px solid #ef0063;
+	background-color: crimson;
+	border: 2px solid crimson;
 	padding: 7px 38px;
 	font-size: 16px;
 	border-radius: 0px;
@@ -66,7 +66,7 @@ body{
 .login-circle {
 	position: relative;
 	top: 60px;
-	color: #ff006a;
+	color: crimson;
 	z-index: 2;	
 }
 @keyframes login{
